--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.28.0
-pandas==2.0.3
-numpy==1.24.3
-matplotlib==3.7.2
-seaborn==0.12.2
-scikit-learn==1.3.2
-openpyxl==3.1.2
-folium==0.14.0
-streamlit-folium==0.15.0
-plotly==5.17.0
+streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=1.24.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+scikit-learn>=1.3.0
+openpyxl>=3.0.0,<3.2.0b1
+folium>=0.14.0
+streamlit-folium>=0.15.0
+plotly>=5.14.0
